tests/error/if_empty_compare.py
if 3 >:
    print 'what'
